fixed stars alignment and a common class interraction bug

--- a/src/components/BackOffice/TabList.css
+++ b/src/components/BackOffice/TabList.css
@@ -90,7 +90,7 @@
   background: #fff;
 }
 
-._3e55Z  ._1xgdB {
+.Backoffice ._2EaQV ._3oZmF ._3e55Z  ._1xgdB {
   top: 0 !important;
   background-color: rgba(250, 235, 175, .6);
   height: 100%;
